<resources>
    <string name="app_name">Mowgli</string>
    <string name="movie_overview">In his second year of fighting crime, Batman uncovers corruption in Gotham City that connects to his own family while facing a serial killer known as the Riddler.</string>
    <string name="movie_title">The Batman</string>
    <string name="textview">TextView</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mowgli">Mowgli</string>
    <string name="insert_description_here"><![CDATA[<<Insert Description Here>>]]></string>
    <string name="password_hint">Password</string>
    <string name="email_address_hint">Email Address</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="username_hint">Username</string>
    <string name="reset_password">Reset Password</string>
    <string name="get_ticket">Get Ticket</string>
</resources>